Changes to be committed:
modified:   .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,15 @@
     },
     "[json]": {
         "editor.tabSize": 4
+    },
+    "editor.fontLigatures": true,
+    "editor.letterSpacing": 0.4,
+    "editor.lineHeight": 1.6,
+    "editor.smoothScrolling": true,
+    "angular-schematics.schematicsDefaultOptions": {
+        "angular-*": {
+            "style": "scss",
+            "externalTemplate": true
+        }
     }
 }
