Changes to be committed:
modified:   .vscode/settings.json
modified:   server.ts
modified:   server/controller/jsonl.controller.ts
modified:   server/services/jsonl.service.ts
modified:   src/app/app.routes.ts
new file:   src/app/dataset/dataset.component.html
new file:   src/app/dataset/dataset.component.less
new file:   src/app/dataset/dataset.component.spec.ts
new file:   src/app/dataset/dataset.component.ts
new file:   src/app/dataset/dataset.resolver.spec.ts
new file:   src/app/dataset/dataset.resolver.ts
new file:   src/app/dataset/dataset.service.spec.ts
new file:   src/app/dataset/dataset.service.ts
modified:   src/app/home/home.component.html
modified:   src/app/home/home.component.ts
new file:   src/app/home/home.resolver.spec.ts
new file:   src/app/home/home.resolver.ts
modified:   src/app/home/home.service.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,21 @@
             "style": "scss",
             "externalTemplate": true
         }
+    },
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope": [
+                    "comment",
+                    "comment.line",
+                    "comment.block",
+                    "comment.block.documentation",
+                    "punctuation.definition.comment"
+                ],
+                "settings": {
+                    "fontStyle": ""
+                }
+            }
+        ]
     }
 }
