Changes to be committed:
modified:   .gitignore
new file:   DATASET/GOOGLE-PALM2-TEXT-BISON/.gitkeep
new file:   DATASET/OPENAI-GPT-3.5/.gitkeep
modified:   package-lock.json
modified:   package.json
modified:   server.ts
modified:   server/controller/jsonl.controller.ts
modified:   server/middlewares/exception-token.middleware.ts
modified:   server/services/document-ocr.service.ts
modified:   server/services/exception-filter.service.ts
modified:   server/services/jsonl.service.ts
modified:   server/services/logger.service.ts
modified:   src/app/app.config.ts
modified:   src/app/app.routes.ts
modified:   src/app/dataset/dataset.component.html
modified:   src/app/dataset/dataset.component.ts
modified:   src/app/dataset/dataset.resolver.ts
modified:   src/app/dataset/dataset.service.ts
modified:   src/app/home/home.component.html
modified:   src/app/home/home.component.ts
modified:   src/app/home/home.resolver.ts
modified:   src/app/home/home.service.ts
new file:   src/app/home/option-label.pipe.spec.ts
new file:   src/app/home/option-label.pipe.ts
modified:   src/styles.less
new file:   src/typings.d.ts

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-DATADOC_OCR/*.jsonl
-DATASET/*.jsonl
-DATATMP/*.state
+DATADOC_OCR/**/*.jsonl
+DATASET/**/*.jsonl
+DATATMP/**/*.state
 
 node_modules/
 dist/
