--- a/package.json
+++ b/package.json
@@ -30,19 +30,20 @@
         "test": "ng test",
         "dev": "rm -rf dist && ng run fine-tune-forge:serve-ssr",
         "serve": "PORT=4000 node dist/fine-tune-forge/server/main.js",
+        "serve:https": "PORT=4000 PROTOCOL_SERVER=https node dist/fine-tune-forge/server/main.js",
         "build": "rm -rf dist && ng build && ng run fine-tune-forge:server && sleep 0.001 && rm -rf dist/fine-tune-forge/**/3rdpartylicenses.txt"
     },
     "dependencies": {
-        "@angular/animations": "^17.1.3",
-        "@angular/common": "^17.1.3",
-        "@angular/compiler": "^17.1.3",
-        "@angular/core": "^17.1.3",
-        "@angular/forms": "^17.1.3",
-        "@angular/platform-browser": "^17.1.3",
-        "@angular/platform-browser-dynamic": "^17.1.3",
-        "@angular/platform-server": "^17.1.3",
-        "@angular/router": "^17.1.3",
-        "@angular/ssr": "^17.1.3",
+        "@angular/animations": "^17.2.1",
+        "@angular/common": "^17.2.1",
+        "@angular/compiler": "^17.2.1",
+        "@angular/core": "^17.2.1",
+        "@angular/forms": "^17.2.1",
+        "@angular/platform-browser": "^17.2.1",
+        "@angular/platform-browser-dynamic": "^17.2.1",
+        "@angular/platform-server": "^17.2.1",
+        "@angular/router": "^17.2.1",
+        "@angular/ssr": "^17.2.0",
         "@google-cloud/documentai": "^8.2.0",
         "axios": "^1.6.7",
         "body-parser": "^1.20.2",
@@ -50,7 +51,7 @@
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "csurf": "^1.11.0",
-        "dotenv": "^16.4.4",
+        "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "express-useragent": "^1.0.15",
         "lodash": "^4.17.21",
@@ -62,9 +63,9 @@
         "zone.js": "~0.14.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^17.1.3",
-        "@angular/cli": "^17.1.3",
-        "@angular/compiler-cli": "^17.1.3",
+        "@angular-devkit/build-angular": "^17.2.0",
+        "@angular/cli": "^17.2.0",
+        "@angular/compiler-cli": "^17.2.1",
         "@types/body-parser": "^1.19.5",
         "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.6",
@@ -74,7 +75,7 @@
         "@types/jasmine": "~4.3.0",
         "@types/lodash": "^4.14.202",
         "@types/multer": "^1.4.11",
-        "@types/node": "^18.19.15",
+        "@types/node": "^18.19.17",
         "@types/request-ip": "^0.0.41",
         "browser-sync": "^3.0.0",
         "jasmine-core": "~4.6.0",
