--- a/package.json
+++ b/package.json
@@ -1,89 +1,89 @@
 {
-    "name": "fine-tune-forge",
-    "description": "FineTuneForge is JSONL generator designed to elevate the fine-tuning process of cutting-edge language models like Google's PaLM 2 and OpenAI's GPT-3.5",
-    "version": "1.0.0-beta.1",
-    "license": "MIT",
-    "author": {
-        "name": "Reyhan Kamil",
-        "email": "mail@ryhkml.dev"
-    },
-    "engines": {
-        "node": "18 || 20"
-    },
-    "keywords": [
-        "JSONL",
-        "Fine-tuning",
-        "Artificial Intelligence",
-        "Dataset Generation",
-        "Text Processing",
-        "Google",
-        "Google Cloud Platform",
-        "VertexAI",
-        "OpenAI",
-        "PaLM 2",
-        "GPT-3.5"
-    ],
-    "private": true,
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "watch": "ng build --watch --configuration development",
-        "test": "ng test",
-        "dev": "rm -rf dist && ng run fine-tune-forge:serve-ssr",
-        "serve": "PORT=4000 node dist/fine-tune-forge/server/main.js",
-        "serve:https": "PORT=4000 PROTOCOL_SERVER=https node dist/fine-tune-forge/server/main.js",
-        "build": "rm -rf dist && ng build && ng run fine-tune-forge:server && sleep 0.001 && rm -rf dist/fine-tune-forge/**/3rdpartylicenses.txt"
-    },
-    "dependencies": {
-        "@angular/animations": "^17.3.11",
-        "@angular/common": "^17.3.11",
-        "@angular/compiler": "^17.3.11",
-        "@angular/core": "^17.3.11",
-        "@angular/forms": "^17.3.11",
-        "@angular/platform-browser": "^17.3.11",
-        "@angular/platform-browser-dynamic": "^17.3.11",
-        "@angular/platform-server": "^17.3.11",
-        "@angular/router": "^17.3.11",
-        "@angular/ssr": "^17.3.8",
-        "@google-cloud/documentai": "^8.8.0",
-        "body-parser": "^1.20.2",
-        "chalk": "^5.3.0",
-        "compression": "^1.7.4",
-        "cookie-parser": "^1.4.6",
-        "csurf": "^1.11.0",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "express-useragent": "^1.0.15",
-        "lodash": "^4.17.21",
-        "multer": "^1.4.5-lts.1",
-        "ng-zorro-antd": "^17.4.1",
-        "request-ip": "^3.3.0",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.14.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^17.3.8",
-        "@angular/cli": "^17.3.8",
-        "@angular/compiler-cli": "^17.3.11",
-        "@types/body-parser": "^1.19.5",
-        "@types/compression": "^1.7.5",
-        "@types/cookie-parser": "^1.4.7",
-        "@types/csurf": "^1.11.5",
-        "@types/express": "^4.17.21",
-        "@types/express-useragent": "^1.0.5",
-        "@types/jasmine": "~4.3.0",
-        "@types/lodash": "^4.17.5",
-        "@types/multer": "^1.4.11",
-        "@types/node": "^18.19.34",
-        "@types/request-ip": "^0.0.41",
-        "browser-sync": "^3.0.0",
-        "jasmine-core": "~4.6.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.2.0",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.1.0",
-        "typescript": "~5.2.2"
-    }
+	"name": "fine-tune-forge",
+	"description": "FineTuneForge is JSONL generator designed to elevate the fine-tuning process of cutting-edge language models like Google's PaLM 2 and OpenAI's GPT-3.5",
+	"version": "1.0.0-beta.1",
+	"license": "MIT",
+	"author": {
+		"name": "Reyhan Kamil",
+		"email": "mail@ryhkml.dev"
+	},
+	"engines": {
+		"node": "20"
+	},
+	"keywords": [
+		"JSONL",
+		"Fine-tuning",
+		"Artificial Intelligence",
+		"Dataset Generation",
+		"Text Processing",
+		"Google",
+		"Google Cloud Platform",
+		"VertexAI",
+		"OpenAI",
+		"PaLM 2",
+		"GPT-3.5"
+	],
+	"private": true,
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test",
+		"dev": "rm -rf dist && ng run fine-tune-forge:serve-ssr",
+		"serve": "PORT=4000 node dist/fine-tune-forge/server/main.js",
+		"serve:https": "PORT=4000 PROTOCOL_SERVER=https node dist/fine-tune-forge/server/main.js",
+		"build": "rm -rf dist && ng build && ng run fine-tune-forge:server && sleep 0.001 && rm -rf dist/fine-tune-forge/**/3rdpartylicenses.txt"
+	},
+	"dependencies": {
+		"@angular/animations": "^17.3.11",
+		"@angular/common": "^17.3.11",
+		"@angular/compiler": "^17.3.11",
+		"@angular/core": "^17.3.11",
+		"@angular/forms": "^17.3.11",
+		"@angular/platform-browser": "^17.3.11",
+		"@angular/platform-browser-dynamic": "^17.3.11",
+		"@angular/platform-server": "^17.3.11",
+		"@angular/router": "^17.3.11",
+		"@angular/ssr": "^17.3.8",
+		"@google-cloud/documentai": "^8.8.0",
+		"body-parser": "^1.20.2",
+		"chalk": "^5.3.0",
+		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.6",
+		"csurf": "^1.11.0",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"express-useragent": "^1.0.15",
+		"lodash": "^4.17.21",
+		"multer": "^1.4.5-lts.1",
+		"ng-zorro-antd": "^17.4.1",
+		"request-ip": "^3.3.0",
+		"rxjs": "~7.8.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.14.2"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^17.3.8",
+		"@angular/cli": "^17.3.8",
+		"@angular/compiler-cli": "^17.3.11",
+		"@types/body-parser": "^1.19.5",
+		"@types/compression": "^1.7.5",
+		"@types/cookie-parser": "^1.4.7",
+		"@types/csurf": "^1.11.5",
+		"@types/express": "^4.17.21",
+		"@types/express-useragent": "^1.0.5",
+		"@types/jasmine": "~4.3.0",
+		"@types/lodash": "^4.17.5",
+		"@types/multer": "^1.4.11",
+		"@types/node": "^18.19.34",
+		"@types/request-ip": "^0.0.41",
+		"browser-sync": "^3.0.0",
+		"jasmine-core": "~4.6.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.2.0",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"typescript": "~5.2.2"
+	}
 }
