--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.9"
 secrets:
   env:
     file: .env
@@ -7,6 +6,7 @@ services:
     container_name: fine-tune-forge
     hostname: fine-tune-forge
     restart: unless-stopped
+    privileged: true
     stdin_open: true
     tty: true
     secrets:
@@ -33,6 +33,7 @@ services:
         reservations:
           cpus: "0.5"
           memory: 64M
+    oom_score_adj: 200
 networks:
   net:
 volumes:
