--- a/angular.json
+++ b/angular.json
@@ -1,174 +1,152 @@
 {
-    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-    "version": 1,
-    "newProjectRoot": "projects",
-    "projects": {
-        "fine-tune-forge": {
-            "projectType": "application",
-            "schematics": {
-                "@schematics/angular:component": {
-                    "style": "less"
-                }
-            },
-            "root": "",
-            "sourceRoot": "src",
-            "prefix": "app",
-            "architect": {
-                "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
-                    "options": {
-                        "outputPath": "dist/fine-tune-forge/browser",
-                        "index": "src/index.html",
-                        "main": "src/main.ts",
-                        "polyfills": [
-                            "zone.js"
-                        ],
-                        "tsConfig": "tsconfig.app.json",
-                        "inlineStyleLanguage": "less",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets",
-                            {
-                                "glob": "**/*",
-                                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
-                                "output": "/assets/"
-                            }
-                        ],
-                        "styles": [
-                            "src/styles.less",
-                            "src/styles.base.css"
-                        ],
-                        "scripts": [
-                            "src/assets/static/custom.js"
-                        ],
-                        "allowedCommonJsDependencies": [
-                            "lodash"
-                        ]
-                    },
-                    "configurations": {
-                        "production": {
-                            "budgets": [
-                                {
-                                    "type": "initial",
-                                    "maximumWarning": "1.5mb",
-                                    "maximumError": "2mb"
-                                },
-                                {
-                                    "type": "anyComponentStyle",
-                                    "maximumWarning": "15kb",
-                                    "maximumError": "20kb"
-                                }
-                            ],
-                            "outputHashing": "all"
-                        },
-                        "development": {
-                            "buildOptimizer": false,
-                            "optimization": false,
-                            "vendorChunk": true,
-                            "extractLicenses": false,
-                            "sourceMap": true,
-                            "namedChunks": true
-                        }
-                    },
-                    "defaultConfiguration": "production"
-                },
-                "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
-                    "configurations": {
-                        "production": {
-                            "buildTarget": "fine-tune-forge:build:production"
-                        },
-                        "development": {
-                            "buildTarget": "fine-tune-forge:build:development"
-                        }
-                    },
-                    "defaultConfiguration": "development"
-                },
-                "extract-i18n": {
-                    "builder": "@angular-devkit/build-angular:extract-i18n",
-                    "options": {
-                        "buildTarget": "fine-tune-forge:build"
-                    }
-                },
-                "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
-                    "options": {
-                        "polyfills": [
-                            "zone.js",
-                            "zone.js/testing"
-                        ],
-                        "tsConfig": "tsconfig.spec.json",
-                        "inlineStyleLanguage": "less",
-                        "assets": [
-                            "src/favicon.ico",
-                            "src/assets"
-                        ],
-                        "styles": [
-                            "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
-                            "src/styles.less"
-                        ],
-                        "scripts": []
-                    }
-                },
-                "server": {
-                    "builder": "@angular-devkit/build-angular:server",
-                    "options": {
-                        "outputPath": "dist/fine-tune-forge/server",
-                        "main": "server.ts",
-                        "tsConfig": "tsconfig.server.json",
-                        "inlineStyleLanguage": "less"
-                    },
-                    "configurations": {
-                        "production": {
-                            "outputHashing": "media"
-                        },
-                        "development": {
-                            "buildOptimizer": false,
-                            "optimization": false,
-                            "sourceMap": true,
-                            "extractLicenses": false,
-                            "vendorChunk": true
-                        }
-                    },
-                    "defaultConfiguration": "production"
-                },
-                "serve-ssr": {
-                    "builder": "@angular-devkit/build-angular:ssr-dev-server",
-                    "configurations": {
-                        "development": {
-                            "browserTarget": "fine-tune-forge:build:development",
-                            "serverTarget": "fine-tune-forge:server:development"
-                        },
-                        "production": {
-                            "browserTarget": "fine-tune-forge:build:production",
-                            "serverTarget": "fine-tune-forge:server:production"
-                        }
-                    },
-                    "defaultConfiguration": "development"
-                },
-                "prerender": {
-                    "builder": "@angular-devkit/build-angular:prerender",
-                    "options": {
-                        "routes": [
-                            "/"
-                        ]
-                    },
-                    "configurations": {
-                        "production": {
-                            "browserTarget": "fine-tune-forge:build:production",
-                            "serverTarget": "fine-tune-forge:server:production"
-                        },
-                        "development": {
-                            "browserTarget": "fine-tune-forge:build:development",
-                            "serverTarget": "fine-tune-forge:server:development"
-                        }
-                    },
-                    "defaultConfiguration": "production"
-                }
-            }
-        }
-    },
-    "cli": {
-        "analytics": "5b86723d-6be0-4e4d-a086-fe26d0fd73cf"
-    }
+	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+	"version": 1,
+	"newProjectRoot": "projects",
+	"projects": {
+		"fine-tune-forge": {
+			"projectType": "application",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "less"
+				}
+			},
+			"root": "",
+			"sourceRoot": "src",
+			"prefix": "app",
+			"architect": {
+				"build": {
+					"builder": "@angular-devkit/build-angular:browser",
+					"options": {
+						"outputPath": "dist/fine-tune-forge/browser",
+						"index": "src/index.html",
+						"main": "src/main.ts",
+						"tsConfig": "tsconfig.app.json",
+						"inlineStyleLanguage": "less",
+						"assets": [
+							"src/favicon.ico",
+							"src/assets",
+							{
+								"glob": "**/*",
+								"input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+								"output": "/assets/"
+							}
+						],
+						"styles": ["src/styles.less", "src/styles.base.css"],
+						"scripts": ["src/assets/static/custom.js"],
+						"allowedCommonJsDependencies": ["lodash"]
+					},
+					"configurations": {
+						"production": {
+							"budgets": [
+								{
+									"type": "initial",
+									"maximumWarning": "1.5mb",
+									"maximumError": "2mb"
+								},
+								{
+									"type": "anyComponentStyle",
+									"maximumWarning": "15kb",
+									"maximumError": "20kb"
+								}
+							],
+							"outputHashing": "all"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"vendorChunk": true,
+							"extractLicenses": false,
+							"sourceMap": true,
+							"namedChunks": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve": {
+					"builder": "@angular-devkit/build-angular:dev-server",
+					"configurations": {
+						"production": {
+							"buildTarget": "fine-tune-forge:build:production"
+						},
+						"development": {
+							"buildTarget": "fine-tune-forge:build:development"
+						}
+					},
+					"defaultConfiguration": "development"
+				},
+				"extract-i18n": {
+					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"options": {
+						"buildTarget": "fine-tune-forge:build"
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"tsConfig": "tsconfig.spec.json",
+						"inlineStyleLanguage": "less",
+						"assets": ["src/favicon.ico", "src/assets"],
+						"styles": ["./node_modules/ng-zorro-antd/ng-zorro-antd.min.css", "src/styles.less"],
+						"scripts": []
+					}
+				},
+				"server": {
+					"builder": "@angular-devkit/build-angular:server",
+					"options": {
+						"outputPath": "dist/fine-tune-forge/server",
+						"main": "server.ts",
+						"tsConfig": "tsconfig.server.json",
+						"inlineStyleLanguage": "less"
+					},
+					"configurations": {
+						"production": {
+							"outputHashing": "media"
+						},
+						"development": {
+							"buildOptimizer": false,
+							"optimization": false,
+							"sourceMap": true,
+							"extractLicenses": false,
+							"vendorChunk": true
+						}
+					},
+					"defaultConfiguration": "production"
+				},
+				"serve-ssr": {
+					"builder": "@angular-devkit/build-angular:ssr-dev-server",
+					"configurations": {
+						"development": {
+							"browserTarget": "fine-tune-forge:build:development",
+							"serverTarget": "fine-tune-forge:server:development"
+						},
+						"production": {
+							"browserTarget": "fine-tune-forge:build:production",
+							"serverTarget": "fine-tune-forge:server:production"
+						}
+					},
+					"defaultConfiguration": "development"
+				},
+				"prerender": {
+					"builder": "@angular-devkit/build-angular:prerender",
+					"options": {
+						"routes": ["/"]
+					},
+					"configurations": {
+						"production": {
+							"browserTarget": "fine-tune-forge:build:production",
+							"serverTarget": "fine-tune-forge:server:production"
+						},
+						"development": {
+							"browserTarget": "fine-tune-forge:build:development",
+							"serverTarget": "fine-tune-forge:server:development"
+						}
+					},
+					"defaultConfiguration": "production"
+				}
+			}
+		}
+	},
+	"cli": {
+		"analytics": "5b86723d-6be0-4e4d-a086-fe26d0fd73cf"
+	}
 }
