--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "fine-tune-forge",
-	"description": "FineTuneForge is JSONL generator designed to elevate the fine-tuning process of cutting-edge language models like Google's PaLM 2 and OpenAI's GPT-3.5",
-	"version": "1.0.0-beta.1",
+	"description": "FineTuneForge is JSONL generator designed to elevate the fine-tuninode_modules/.bin/ng process of cutting-edge language models like Google's PaLM 2 and OpenAI's GPT-3.5",
+	"version": "1.0.0-beta.2",
 	"license": "MIT",
 	"author": {
 		"name": "Reyhan Kamil",
@@ -25,26 +25,26 @@
 	],
 	"private": true,
 	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"watch": "ng build --watch --configuration development",
-		"test": "ng test",
-		"dev": "rm -rf dist && ng run fine-tune-forge:serve-ssr",
+		"ng": "node_modules/.bin/ng",
+		"start": "node_modules/.bin/ng serve",
+		"watch": "node_modules/.bin/ng build --watch --configuration development",
+		"test": "node_modules/.bin/ng test",
+		"dev": "rm -rf dist && node_modules/.bin/ng run fine-tune-forge:serve-ssr",
 		"serve": "PORT=4000 node dist/fine-tune-forge/server/main.js",
 		"serve:https": "PORT=4000 PROTOCOL_SERVER=https node dist/fine-tune-forge/server/main.js",
-		"build": "rm -rf dist && ng build && ng run fine-tune-forge:server && sleep 0.001 && rm -rf dist/fine-tune-forge/**/3rdpartylicenses.txt"
+		"build": "rm -rf dist && node_modules/.bin/ng build && ng run fine-tune-forge:server && sleep 0.001 && rm -rf dist/fine-tune-forge/**/3rdpartylicenses.txt"
 	},
 	"dependencies": {
-		"@angular/animations": "^17.3.11",
-		"@angular/common": "^17.3.11",
-		"@angular/compiler": "^17.3.11",
-		"@angular/core": "^17.3.11",
-		"@angular/forms": "^17.3.11",
-		"@angular/platform-browser": "^17.3.11",
-		"@angular/platform-browser-dynamic": "^17.3.11",
-		"@angular/platform-server": "^17.3.11",
-		"@angular/router": "^17.3.11",
-		"@angular/ssr": "^17.3.8",
+		"@angular/animations": "^18.2.13",
+		"@angular/common": "^18.2.13",
+		"@angular/compiler": "^18.2.13",
+		"@angular/core": "^18.2.13",
+		"@angular/forms": "^18.2.13",
+		"@angular/platform-browser": "^18.2.13",
+		"@angular/platform-browser-dynamic": "^18.2.13",
+		"@angular/platform-server": "^18.2.13",
+		"@angular/router": "^18.2.13",
+		"@angular/ssr": "^18.2.12",
 		"@google-cloud/documentai": "^8.8.0",
 		"body-parser": "^1.20.2",
 		"chalk": "^5.3.0",
@@ -56,16 +56,16 @@
 		"express-useragent": "^1.0.15",
 		"lodash": "^4.17.21",
 		"multer": "^1.4.5-lts.1",
-		"ng-zorro-antd": "^17.4.1",
+		"ng-zorro-antd": "^18.2.1",
 		"request-ip": "^3.3.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^17.3.8",
-		"@angular/cli": "^17.3.8",
-		"@angular/compiler-cli": "^17.3.11",
+		"@angular-devkit/build-angular": "^18.2.12",
+		"@angular/cli": "^18.2.12",
+		"@angular/compiler-cli": "^18.2.13",
 		"@types/body-parser": "^1.19.5",
 		"@types/compression": "^1.7.5",
 		"@types/cookie-parser": "^1.4.7",
@@ -84,6 +84,6 @@
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
-		"typescript": "~5.2.2"
+		"typescript": "~5.5.4"
 	}
 }
