--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
 		"@angular/platform-browser-dynamic": "^18.2.13",
 		"@angular/platform-server": "^18.2.13",
 		"@angular/router": "^18.2.13",
-		"@angular/ssr": "^18.2.12",
+		"@angular/ssr": "^18.2.18",
+		"@ctrl/tinycolor": "^4.1.0",
 		"@google-cloud/documentai": "^8.8.0",
 		"body-parser": "^1.20.2",
 		"chalk": "^5.3.0",
@@ -63,8 +64,8 @@
 		"zone.js": "~0.14.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^18.2.12",
-		"@angular/cli": "^18.2.12",
+		"@angular-devkit/build-angular": "^18.2.18",
+		"@angular/cli": "^18.2.18",
 		"@angular/compiler-cli": "^18.2.13",
 		"@types/body-parser": "^1.19.5",
 		"@types/compression": "^1.7.5",
